[metadata]
name = RLPack
description = Implementation of RL Algorithms
long_description = Implementation of RL Algorithms with C++ backend and made available to Gym Frontend with Python Bindings
long_description_content_type = text/markdown
author = Kartik Rajeshwaran
author_email = kartik.rajeshwaran@gmail.com
license = MIT
platforms = any
url = None
project_urls =
    Source  = None
    Tracker = None
keywords = reinforcement-learning gym cpp
classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
    gym
    cmake-build-extension

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

[options.entry_points]
console_scripts =
    RLPack_entry = RLPack.bin.__main__:main

[tool:pytest]
addopts = -rsxX -v
testpaths = Interface